fix player too high

--- a/www/less/main/pages/content-blackboard.less
+++ b/www/less/main/pages/content-blackboard.less
@@ -1,9 +1,17 @@
 .course-page .course-blackboard {
+	.course-header-content {
+		min-height: 450px;
+		height: 450px !important;
+	}
+
 	.felt {
 		position: absolute;
 		width: 100%;
 		background-image: url("/img/zwartevilt.jpg");
 		background-size: 531px 337px;
+	}
+	#canvas {
+		height: 450px;
 	}
 	#wave {
 		border-top: 1px solid #333333;
